[metadata]
name = apache-log-analyzer
version = attr: apache_log_analyzer.__version__
url = attr: apache_log_analyzer.__url__
author = attr: apache_log_analyzer.__author__
author_email = attr: apache_log_analyzer.__author_email__
license = attr: apache_log_analyzer.__license__
description = ...
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires =
    pytz
    apache-log-parser

[options.entry_points]
console_scripts =
    apache-log-analyzer = apache_log_analyzer.main:main
